--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
     <!-- CSS -->
@@ -29,7 +31,17 @@
 
         <section id="app">
 
-            <thecars @loadcardata="loadcardata" v-for="piece in carData" :piece="piece"></thecars>
+            <div class="carShow four-items">
+
+                <thecars @loadcardata="loadcardata" v-for="piece in carData" :piece="piece"></thecars>
+
+                <thelightbox
+                @closelb="this.showLB = false" 
+                v-if="showLB" 
+                :item="lbData">
+                </thelightbox>
+
+            </div>
 
         </section>
 
@@ -37,5 +49,7 @@
     <footer class="footer">
 
     </footer>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="js/main.js" type="module" defer></script>
 </body>
 </html>
