--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <header class="header">
+        <div class="center">
             <div class="nav center">
                 <img src="images/logo.png" alt="logo mini">
                 <nav>
@@ -25,6 +26,7 @@
                     </ul>
                 </nav>
             </div>
+        </div>
 
     </header>
     <main class="main" id="main">
