--- a/index.html
+++ b/index.html
@@ -31,7 +31,27 @@
     </header>
     <main class="main" id="main">
 
-        <section id="app">
+        <section class="center fluid">
+            <img class="heroImg" src="images/header_img.jpg" alt="" srcset="">
+            <div class="textOnImg two-items">
+                <h3 class="lightBlackBackground miniText largeText white">OUT OF THE SHADOWS, INTO THE SPOTLIGHT.
+                THE NEW MINI COUNTRYMAN SHADOW EDITION.</h3>
+                <h3 class="hidden"></h3>
+                <button class="miniText">Learn More</button>
+            </div>
+        </section>
+
+        <section class="one-item center sectionMargin">
+            <div class="mediumText miniText">
+                Mini difference
+            </div>
+            <div class="bigAssText miniText">
+                Great change
+            </div>
+        </section>
+
+
+        <section class="sectionMargin" id="app">
 
             <div class="carShow four-items">
 
@@ -49,7 +69,24 @@
 
     </main>
     <footer class="footer">
-
+        <div class="center">
+            <div class="footerNav center ">
+                <img src="images/logo.png" alt="logo mini">
+                <nav class="">
+                    <ul class="noMargin">
+                        <li>Contact Us</li>
+                        <li>Cookies & Ads</li>
+                        <li>Privacy Policy</li>
+                        <li>Accessibility</li>
+                        <li>Terms of Use</li>
+                        <li>Unsubscribe</li>
+                        <li>BMW Group</li>
+                        <li>Change province (ON)</li>
+                        <li>Francais</li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </footer>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="js/main.js" type="module" defer></script>
